--- a/portfolio_style.css
+++ b/portfolio_style.css
@@ -1,6 +1,6 @@
 body {
     font-family: "Sitka Small", Arial, sans-serif;
-    color: #fafafa;
+    color: #fff;
     margin: 0;
 }
 
@@ -47,7 +47,7 @@ header div {
 }
 
 aside {
-    background-color: #99a1b8;
+    background-color: #98a7b8;
     margin-top: 8em;
     border-top: solid 5px #e992b6;
     border-bottom: solid 5px #e992b6;
@@ -58,24 +58,22 @@ section {
 }
 
 section div {
-    margin-top: 0;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
     padding: 0;
-
 }
 
 section div a {
     border: solid 4px #e992b6;
     border-radius: 10px;
     background-color: #434559;
-    color: #fafafa;
+    color: #fff;
     padding: 30px;
 }
 
 aside, section, footer {
-    padding: 2em;
+    padding: 1em;
 }
 
 footer {
@@ -85,7 +83,7 @@ footer li {
     list-style: none;
 }
 
-footer li:before {
+/*footer li:before {*/
 
-}
+/*}*/
 
